--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 	<script src="assets/js/jquery-1.11.3.js"> </script>
 	<script src="assets/js/script.js"></script>
-     
+
 </head>
 
 
@@ -29,16 +29,16 @@
 		<div class = "image" id = "cow7"></div>
 		<div id = "grass">
 			
-			<img class = "img-scaled-w" src="assets/img/grass.jpg"></img>
-			<img class = "img-scaled-w" src="assets/img/grass.jpg"></img> 
-			<img class = "img-scaled-w" src="assets/img/grass.jpg"></img>
-			<img class = "img-scaled-w" src="assets/img/grass.jpg"></img>
-			<img class = "img-scaled-w" src="assets/img/grass.jpg"></img>
-			<img class = "img-scaled-w" src="assets/img/grass.jpg"></img>
-			<img class = "img-scaled-w" src="assets/img/grass.jpg"></img>
-			<img class = "img-scaled-w" src="assets/img/grass.jpg"></img>
-			<img class = "img-scaled-w" src="assets/img/grass.jpg"></img>
-			<img class = "img-scaled-w" src="assets/img/grass.jpg"></img>
+			<img class = "img-scaled-w" src="assets/img/Grass.jpg"></img>
+			<img class = "img-scaled-w" src="assets/img/Grass.jpg"></img> 
+			<img class = "img-scaled-w" src="assets/img/Grass.jpg"></img>
+			<img class = "img-scaled-w" src="assets/img/Grass.jpg"></img>
+			<img class = "img-scaled-w" src="assets/img/Grass.jpg"></img>
+			<img class = "img-scaled-w" src="assets/img/Grass.jpg"></img>
+			<img class = "img-scaled-w" src="assets/img/Grass.jpg"></img>
+			<img class = "img-scaled-w" src="assets/img/Grass.jpg"></img>
+			<img class = "img-scaled-w" src="assets/img/Grass.jpg"></img>
+			<img class = "img-scaled-w" src="assets/img/Grass.jpg"></img>
 		
 		</div>
 
