--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<div id = "page">
 		<div id = "topbar"> 
 			<div class = "navitems">
-				<p class = "nav_item" id="nav_text"> Sell Cows </p>
+				<p class = "nav_item" id="nav_text"><a href= "viewthree.html" class = "link"> Sell Cows </a></p>
 				<div class = "nav_item" id="nav_image"><img class = "img-scaled-w" id="dollar" src ="assets/img/Dollar.png"></img></div>
-				<p class = "nav_item" id="nav_text"> Your Cows </p>
+				<p class = "nav_item" id="nav_text"><a href= "viewtwo.html" class= "link"> Your Cows </a> </p>
 				<div class = "nav_item " id="nav_image"><img class = "img-scaled-w" src="assets/img/Farm.png"></img></div> 
 			</div>
 		</div>
