--- a/viewtwo.html
+++ b/viewtwo.html
@@ -11,9 +11,9 @@
 	<div id = "page2">
 		<div id = "topbar"> 
 			<div class = "navitems">
-				<p class = "nav_item" id="nav_text"> Sell Cows </p>
+				<p class = "nav_item" id="nav_text"><a href= "viewthree.html" class = "link"> Sell Cows </a> </p>
 				<div class = "nav_item" id="nav_image"><img class = "img-scaled-w" id="dollar" src ="assets/img/Dollar.png"></img></div>
-				<p class = "nav_item" id="nav_text"> Get Cows </p>
+				<p class = "nav_item" id="nav_text"><a href= "index.html" class = "link"> Get Cows </a> </p>
 				<div class = "nav_item " id="nav_image"><img class = "img-scaled-w" src="assets/img/hills.png"></img></div> 
 			</div>
 		</div>
